# visionops

./: .gitignore  README.md  package.json
backend/: pyproject.toml
backend/app/: db.py  main.py  models.py  schemas.py  worker.py
backend/app/api/routes/: datasets.py  inference.py  local_files.py  notification_settings.py  projects.py  runtime.py  splits.py  training.py
backend/app/core/: config.py
backend/app/services/: dataset_validation.py  ids.py  inference.py  jobs.py  logs.py  metrics.py  notifications.py  runtime.py  split.py  storage.py  training.py
backend/tests/: conftest.py  test_api_smoke.py  test_dataset_validation.py  test_datasets_api.py  test_inference_service.py  test_jobs.py  test_local_files_api.py  test_notification_service.py  test_notification_settings_api.py  test_projects_api.py  test_runtime_api.py  test_split_service.py  test_splits_api.py  test_storage_and_db.py  test_training_api.py  test_training_logs_metrics.py  test_training_preflight_api.py  test_training_service.py  test_worker_notifications.py
docs/superpowers/plans/: 2026-07-03-visionops-mvp-implementation.md  2026-07-06-notification-integrations.md
docs/superpowers/specs/: 2026-07-03-visionops-mvp-design.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/tests/: api-client.test.ts  classification-ui.test.tsx  i18n-source.test.js  notification-settings-ui.test.tsx  projects-ui.test.tsx  realtime.test.ts  styles-source.test.js  theme.test.tsx
scripts/: dev.mjs  dev.test.mjs
(+18 files in other folders)
